# jlibc

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  bootstrap.sh  configure.ac
docs/: Doxyfile
include/: jlibc.h
include/jlibc/: jlibc.h  memory.h
src/: memory.c
tests/: Makefile.in  Makefile.in.original
tests/include/: memory-test-suite.h
tests/src/: main.c  memory-test-suite.c
